Fix spacing between tabs and arrows

--- a/src/index.css
+++ b/src/index.css
@@ -721,7 +721,7 @@ All colors MUST be HSL.
   /* Navigation arrows */
   .carousel-arrow {
     position: absolute;
-    top: -70px;
+    top: -40px;
     transform: translateY(0);
     width: 48px;
     height: 48px;
@@ -774,7 +774,7 @@ All colors MUST be HSL.
     }
     
     .carousel-arrow {
-      top: -70px;
+      top: -40px;
       width: 48px;
       height: 48px;
       background: rgba(255, 255, 255, 0.95);
@@ -812,7 +812,7 @@ All colors MUST be HSL.
     
     .carousel-arrow {
       position: absolute;
-      top: -60px;
+      top: -35px;
       transform: translateY(0);
       width: 40px;
       height: 40px;
